--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
+        args: ["--profile=black"]
   - repo: https://github.com/psf/black
     rev: 23.1.0
     hooks:
@@ -13,3 +14,7 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.5
+    hooks:
+      - id: codespell
