--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -18,7 +18,19 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8==4.0.1
+        pip install flake8==7.0.0
+        pip install isort==5.13.2
+        pip install black==24.4.2
+        pip install codespell
+    - name: Run Isort
+      run: |
+        isort .
+    - name: Run Black
+      run: |
+        black .
     - name: Run Flake8
       run: |
         flake8
+    - name: Run Codespell
+      run: |
+        codespell
