--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -18,10 +18,10 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8==7.0.0
+        pip install flake8==7.1.1
         pip install isort==5.13.2
-        pip install black==24.4.2
-        pip install codespell
+        pip install black==24.10.0
+        pip install codespell==2.3.0
     - name: Run Isort
       run: |
         isort .
