--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,26 +2,30 @@ name: CI
 
 on:
   push:
-    branches: [ "dev" ]
+    branches:
+      - master
+      - dev
   pull_request:
-    branches: [ "dev" ]
+    branches:
+      - master
+      - dev
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.11"
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8==7.1.1
-        pip install isort==5.13.2
-        pip install black==24.10.0
-        pip install codespell==2.3.0
+        pip install flake8==7.1.2
+        pip install isort==6.0.1
+        pip install black==25.1.0
+        pip install codespell==2.4.1
     - name: Run Isort
       run: |
         isort .
