--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 # Core
-Django==5.1.3
-django-environ==0.11.2
+Django==5.1.7
+django-environ==0.12.0
 gunicorn==23.0.0
 psycopg2==2.9.10
 
 # Rest apis
 djangorestframework==3.15.2
-djangorestframework_simplejwt==5.3.1
-django-cors-headers==4.6.0
-drf-yasg==1.21.8
-whitenoise==6.8.2
+djangorestframework_simplejwt==5.5.0
+django-cors-headers==4.7.0
+drf-yasg==1.21.10
+whitenoise==6.9.0
 
 # Certificates
-cryptography==43.0.3
+cryptography==44.0.2
+
+# Dotenv
+python-dotenv==1.1.0
