--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,25 +1,26 @@
 # Core
-Django==5.1.3
-django-environ==0.11.2
+Django==5.1.7
+django-environ==0.12.0
 gunicorn==23.0.0
 psycopg2-binary==2.9.10
 
 # Rest apis
 djangorestframework==3.15.2
-djangorestframework_simplejwt==5.3.1
-django-cors-headers==4.6.0
-drf-yasg==1.21.8
-whitenoise==6.8.2
+djangorestframework_simplejwt==5.5.0
+django-cors-headers==4.7.0
+drf-yasg==1.21.10
+whitenoise==6.9.0
+
+# Certificates
+cryptography==44.0.2
+
+# Dotenv
+python-dotenv==1.1.0
 
 # Code quality
 # ------------------------------------------------------------------------------
-flake8==7.1.1
-flake8-isort==6.1.1
-coverage==7.6.8
-black==24.10.0
-pylint-django==2.6.1
-pre-commit==4.0.1
-codespell==2.3.0
-
-# Certificates
-cryptography==43.0.3
+flake8==7.1.2
+isort==6.0.1
+black==25.1.0
+pre-commit==4.2.0
+codespell==2.4.1
