--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 Django==5.1.7
 django-environ==0.12.0
 gunicorn==23.0.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 
 # Rest apis
 djangorestframework==3.15.2
