--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ psycopg2-binary==2.9.10
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 django-cors-headers==4.7.0
-drf-yasg==1.21.10
+drf-spectacular==0.28.0
 whitenoise==6.9.0
 
 # Certificates
