--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,30 +11,12 @@ on:
       - dev
 
 jobs:
-  build:
+  run-linters:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11"
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8==7.1.2
-        pip install isort==6.0.1
-        pip install black==25.1.0
-        pip install codespell==2.4.1
-    - name: Run Isort
-      run: |
-        isort .
-    - name: Run Black
-      run: |
-        black .
-    - name: Run Flake8
-      run: |
-        flake8
-    - name: Run Codespell
-      run: |
-        codespell
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+      - uses: pre-commit/action@v3.0.1
